// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plansField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <table
        class="uv_2xypr51"
      >
        <thead>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9ow16 uv_m4c9ow1a"
              >
                Features
              </span>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
            >
              <span
                class="uv_2xypr52 uv_1yf71jy0 uv_1yf71jy2 uv_1yf71jy7 uv_1yf71jyf uv_1yf71jyn uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owq uv_m4c9ow1a"
                style="--uv_qabug41: nowrap;"
              >
                Out of stock
              </span>
              <div
                class="uv_2xypr5e uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u3v uv_toi52u77"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u41"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <div
                    class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u3p"
                  >
                    <span
                      class="uv_1yf71jy0 uv_1yf71jy1 uv_1yf71jy2 uv_1yf71jy8 uv_1yf71jye uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owp uv_m4c9ow1d"
                      style="--uv_qabug41: nowrap;"
                    >
                      <label
                        for="starter"
                      >
                        Starter
                      </label>
                    </span>
                    <div
                      class="uv_toi52u0 uv_toi52ud uv_toi52u2d"
                    >
                      <span
                        class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owc uv_m4c9ow16 uv_m4c9ow1e"
                      >
                        €0.99
                      </span>
                      <div
                        class="uv_toi52u0 uv_toi52u2d"
                        style="min-height: 16px;"
                      >
                        <span
                          class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owc uv_m4c9owp uv_m4c9ow1e"
                        >
                          /month
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="uv_2xypr5f"
                  >
                    <div
                      class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owp"
                    >
                      <div
                        style="display: flex; flex-direction: column; gap: 16px;"
                      >
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                        <p
                          style="padding-inline: 16px;"
                        >
                          For developers & non mission-critical projects 
                        </p>
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u41"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <button
                    class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe4 uv_e1wcoe9 uv_e1wcoef uv_e1wcoei uv_e1wcoel"
                    type="button"
                  >
                    Select plan
                  </button>
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr54 uv_2xypr59"
            >
              <input
                class="uv_2xypr5d"
                data-testid="advanced"
                id="advanced"
                name="plans"
                type="radio"
                value="advanced"
              />
              <div
                class="uv_2xypr5e uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u3v uv_toi52u77"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u41"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <div
                    class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u3p"
                  >
                    <span
                      class="uv_1yf71jy0 uv_1yf71jy2 uv_1yf71jy8 uv_1yf71jye uv_1yf71jyh uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owp uv_m4c9ow1a"
                      style="--uv_qabug41: nowrap;"
                    >
                      <label
                        for="advanced"
                      >
                        Advanced
                      </label>
                    </span>
                    <svg
                      class="uv_icons_q76b9r3 uv_icons_q76b9r5"
                      height="64"
                      viewBox="0 0 64 64"
                      width="64"
                    >
                      <title>
                        EntrepriseSupportProductIcon
                      </title>
                      <g
                        clip-path="url(#a)"
                      >
                        <g>
                          <g
                            class="fillWeak"
                            fill="#521094"
                          >
                            <path
                              d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M48 2H16C8.268 2 2 8.268 2 16v32c0 7.732 6.268 14 14 14h32c7.732 0 14-6.268 14-14V16c0-7.732-6.268-14-14-14M16 0C7.163 0 0 7.163 0 16v32c0 8.837 7.163 16 16 16h32c8.837 0 16-7.163 16-16V16c0-8.837-7.163-16-16-16z"
                              fill-rule="evenodd"
                            />
                          </g>
                        </g>
                        <g>
                          <path
                            class="fillStrong"
                            clip-rule="evenodd"
                            d="M32 35c-5.799 0-10.5 4.701-10.5 10.5 0 2.1.616 4.053 1.676 5.693a1 1 0 0 1 .126.802l-.985 3.676 3.904-1.046a1 1 0 0 1 .74.09A10.45 10.45 0 0 0 32 56c5.799 0 10.5-4.701 10.5-10.5S37.799 35 32 35M19.5 45.5C19.5 38.596 25.096 33 32 33s12.5 5.596 12.5 12.5S38.904 58 32 58c-2.027 0-3.944-.483-5.64-1.342l-5.199 1.393a1 1 0 0 1-1.225-1.224l1.322-4.932A12.45 12.45 0 0 1 19.5 45.5"
                            fill="#bf95f9"
                            fill-rule="evenodd"
                          />
                          <g
                            class="fill"
                            fill="#fff"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M31.999 6c-5.117 0-9.492 3.17-11.265 7.648A3.66 3.66 0 0 0 19 16.763v2.662a3.66 3.66 0 0 0 3.663 3.663h2.396A8.55 8.55 0 0 0 32 26.638c2.858 0 5.389-1.4 6.942-3.551h2.395a3.66 3.66 0 0 0 3.662-3.663v-2.662a3.66 3.66 0 0 0-1.736-3.116A12.11 12.11 0 0 0 31.999 6m0 2a10.11 10.11 0 0 0-8.788 5.1h1.847A8.55 8.55 0 0 1 32 9.55a8.55 8.55 0 0 1 6.94 3.55h1.846A10.11 10.11 0 0 0 32 8Zm-8.553 10.094c0 1.054.19 2.062.54 2.994h-1.324A1.66 1.66 0 0 1 21 19.425v-2.662c0-.918.744-1.662 1.662-1.662h1.323a8.5 8.5 0 0 0-.54 2.993ZM40.014 15.1c.35.932.54 1.94.54 2.994 0 1.053-.19 2.062-.54 2.993h1.323c.918 0 1.662-.744 1.662-1.663v-2.662c0-.918-.744-1.662-1.662-1.662zm-14.568 2.994c0-3.612 2.933-6.543 6.554-6.543s6.554 2.93 6.554 6.543-2.933 6.544-6.554 6.544a6.55 6.55 0 0 1-6.554-6.544"
                              fill-rule="evenodd"
                            />
                            <path
                              d="M44.471 44.65a13 13 0 0 1-.024 2.013c4.155.524 8.378.328 12.482-.588q.035.003.071.002a1 1 0 0 0 1-1V40.68a6.347 6.347 0 0 0-6.347-6.347h-5.306a6.3 6.3 0 0 0-2.346.448 8.06 8.06 0 0 0-7.952-6.742h-8.1a8.06 8.06 0 0 0-7.952 6.741 6.3 6.3 0 0 0-2.344-.447h-5.306A6.347 6.347 0 0 0 6 40.68v4.353a1 1 0 0 0 .774.974 36.4 36.4 0 0 0 12.78.656 13 13 0 0 1-.025-2.014c-3.834.51-7.731.37-11.529-.42V40.68c0-2.4 1.946-4.347 4.347-4.347h5.306a4.3 4.3 0 0 1 2.237.62v5.437a12.5 12.5 0 0 1 2-4.243V36.1a6.06 6.06 0 0 1 6.06-6.06h8.099a6.06 6.06 0 0 1 6.06 6.06v2.046a12.5 12.5 0 0 1 2 4.238v-5.43a4.33 4.33 0 0 1 2.238-.62h5.306c2.4 0 4.347 1.946 4.347 4.347v3.55a34.5 34.5 0 0 1-11.529.42Z"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M42.666 27.333a6.333 6.333 0 1 1 12.667 0 6.333 6.333 0 0 1-12.666 0ZM49 23a4.333 4.333 0 1 0 0 8.667A4.333 4.333 0 0 0 49 23m-34-2a6.333 6.333 0 1 0 0 12.667A6.333 6.333 0 0 0 15 21m-4.334 6.333a4.333 4.333 0 1 1 8.667 0 4.333 4.333 0 0 1-8.666 0ZM32 38.5a1 1 0 0 1 .897.557l1.53 3.102 3.423.497a1 1 0 0 1 .554 1.706l-2.476 2.414.584 3.41a1 1 0 0 1-1.45 1.053L32 49.63l-3.061 1.61a1 1 0 0 1-1.451-1.054l.584-3.409-2.476-2.414a1 1 0 0 1 .554-1.706l3.423-.497 1.53-3.102A1 1 0 0 1 32 38.5m0 3.26-.867 1.756a1 1 0 0 1-.753.547l-1.937.281 1.402 1.367a1 1 0 0 1 .287.885l-.33 1.93 1.733-.911a1 1 0 0 1 .93 0l1.734.911-.331-1.93a1 1 0 0 1 .287-.885l1.402-1.367-1.937-.281a1 1 0 0 1-.753-.547z"
                              fill-rule="evenodd"
                            />
                          </g>
                        </g>
                      </g>
                      <defs>
                        <clippath
                          id="a"
                        >
                          <path
                            class="fill"
                            d="M0 0h64v64H0z"
                            fill="#fff"
                          />
                        </clippath>
                      </defs>
                    </svg>
                    <div
                      class="uv_toi52u0 uv_toi52ud uv_toi52u2d"
                    >
                      <span
                        class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owc uv_m4c9ow16 uv_m4c9ow1a uv_m4c9ow2e"
                      >
                        €109.99
                      </span>
                      <div
                        class="uv_toi52u0 uv_toi52u2d"
                        style="min-height: 16px;"
                      />
                    </div>
                  </div>
                  <div
                    class="uv_2xypr5f"
                  >
                    <div
                      class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owp uv_m4c9ow1a"
                    >
                      <div
                        style="display: flex; flex-direction: column; gap: 16px;"
                      >
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                        <p
                          style="padding-inline: 16px;"
                        >
                          For fast-growing starups & mission-critical infrastructure
                        </p>
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u41"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <div
                    class="uv_2xypr5h"
                  >
                    <span
                      class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owc uv_m4c9owl uv_m4c9ow1a uv_m4c9ow2e"
                    >
                      Current plan
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Cache
                  </p>
                  <div
                    aria-controls="_r_c_"
                    aria-describedby="_r_c_"
                    class="uv_w40vpo9"
                    tabindex="0"
                  >
                    <svg
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        InformationOutlineIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M8 2.313a5.687 5.687 0 1 0 0 11.374A5.687 5.687 0 0 0 8 2.313M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8m6.344-2.643c0-.363.294-.656.656-.656h.005c.363 0 .657.293.657.656v.005a.656.656 0 0 1-.657.656H8a.656.656 0 0 1-.656-.656zm.213 2.765a.657.657 0 0 1-.38-1.238l.03-.014c.906-.453 1.925.365 1.68 1.347l-.444 1.775a.657.657 0 0 1 .38 1.238l-.03.015c-.906.453-1.925-.365-1.68-1.347z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owp uv_m4c9ow1d uv_m4c9ow35"
                  style="--uv_qabug40: start;"
                >
                  €0.0135 per GB additionnal
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
              data-testid="starter-gb"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow22"
              >
                100 GB
              </span>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr54 uv_2xypr59"
              data-testid="advanced-gb"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
              >
                10 TB
              </span>
            </td>
          </tr>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Pipeline
                  </p>
                  <div
                    aria-controls="_r_h_"
                    aria-describedby="_r_h_"
                    class="uv_w40vpo9"
                    tabindex="-1"
                  >
                    <button
                      class="uv_2xypr50"
                      data-testid="hint-popover"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <title>
                          InformationOutlineIcon
                        </title>
                        <path
                          clip-rule="evenodd"
                          d="M8 2.313a5.687 5.687 0 1 0 0 11.374A5.687 5.687 0 0 0 8 2.313M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8m6.344-2.643c0-.363.294-.656.656-.656h.005c.363 0 .657.293.657.656v.005a.656.656 0 0 1-.657.656H8a.656.656 0 0 1-.656-.656zm.213 2.765a.657.657 0 0 1-.38-1.238l.03-.014c.906-.453 1.925.365 1.68 1.347l-.444 1.775a.657.657 0 0 1 .38 1.238l-.03.015c-.906.453-1.925-.365-1.68-1.347z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owp uv_m4c9ow1d uv_m4c9ow35"
                  style="--uv_qabug40: start;"
                >
                  €4.00 per additional
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
              data-testid="starter-pipeline"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow22"
              >
                1 pipeline
              </span>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr54 uv_2xypr59"
              data-testid="advanced-pipeline"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
              >
                100 pipelines
              </span>
            </td>
          </tr>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Custom domaine
                  </p>
                  <div />
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
              data-testid="starter-domain"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz1a"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CloseIcon
                </title>
                <path
                  d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94z"
                />
              </svg>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr54 uv_2xypr59"
              data-testid="advanced-domain"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkz1j"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16m3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
          </tr>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    SSL Certificate
                  </p>
                  <div
                    aria-controls="_r_n_"
                    aria-describedby="_r_n_"
                    class="uv_w40vpo9"
                    tabindex="0"
                  >
                    <svg
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        InformationOutlineIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M8 2.313a5.687 5.687 0 1 0 0 11.374A5.687 5.687 0 0 0 8 2.313M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8m6.344-2.643c0-.363.294-.656.656-.656h.005c.363 0 .657.293.657.656v.005a.656.656 0 0 1-.657.656H8a.656.656 0 0 1-.656-.656zm.213 2.765a.657.657 0 0 1-.38-1.238l.03-.014c.906-.453 1.925.365 1.68 1.347l-.444 1.775a.657.657 0 0 1 .38 1.238l-.03.015c-.906.453-1.925-.365-1.68-1.347z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
              data-testid="starter-ssl"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkzn"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16m3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr54 uv_2xypr59"
              data-testid="advanced-ssl"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkz1j"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16m3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
          </tr>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Egress fees
                  </p>
                  <div />
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
              data-testid="starter-fees"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkzn"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16m3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr54 uv_2xypr59"
              data-testid="advanced-fees"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkz1j"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16m3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
          </tr>
        </tbody>
      </table>
    </form>
  </div>
</DocumentFragment>
`;

exports[`plansField > should render required 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <table
        class="uv_2xypr51"
      >
        <thead>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9ow16 uv_m4c9ow1a"
              >
                Features
              </span>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
            >
              <span
                class="uv_2xypr52 uv_1yf71jy0 uv_1yf71jy2 uv_1yf71jy7 uv_1yf71jyf uv_1yf71jyn uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owq uv_m4c9ow1a"
                style="--uv_qabug41: nowrap;"
              >
                Out of stock
              </span>
              <div
                class="uv_2xypr5e uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u3v uv_toi52u77"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u41"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <div
                    class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u3p"
                  >
                    <span
                      class="uv_1yf71jy0 uv_1yf71jy1 uv_1yf71jy2 uv_1yf71jy8 uv_1yf71jye uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owp uv_m4c9ow1d"
                      style="--uv_qabug41: nowrap;"
                    >
                      <label
                        for="starter"
                      >
                        Starter
                      </label>
                    </span>
                    <div
                      class="uv_toi52u0 uv_toi52ud uv_toi52u2d"
                    >
                      <span
                        class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owc uv_m4c9ow16 uv_m4c9ow1e"
                      >
                        €0.99
                      </span>
                      <div
                        class="uv_toi52u0 uv_toi52u2d"
                        style="min-height: 16px;"
                      >
                        <span
                          class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owc uv_m4c9owp uv_m4c9ow1e"
                        >
                          /month
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="uv_2xypr5f"
                  >
                    <div
                      class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owp"
                    >
                      <div
                        style="display: flex; flex-direction: column; gap: 16px;"
                      >
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                        <p
                          style="padding-inline: 16px;"
                        >
                          For developers & non mission-critical projects 
                        </p>
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u41"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <button
                    class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe4 uv_e1wcoe9 uv_e1wcoef uv_e1wcoei uv_e1wcoel"
                    type="button"
                  >
                    Select plan
                  </button>
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr59"
            >
              <input
                class="uv_2xypr5d"
                data-testid="advanced"
                id="advanced"
                name="plans"
                type="radio"
                value="advanced"
              />
              <div
                class="uv_2xypr5e uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u3v uv_toi52u77"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u41"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <div
                    class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u3p"
                  >
                    <span
                      class="uv_1yf71jy0 uv_1yf71jy2 uv_1yf71jy8 uv_1yf71jye uv_1yf71jyh uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owp uv_m4c9ow1a"
                      style="--uv_qabug41: nowrap;"
                    >
                      <label
                        for="advanced"
                      >
                        Advanced
                      </label>
                    </span>
                    <svg
                      class="uv_icons_q76b9r3 uv_icons_q76b9r5"
                      height="64"
                      viewBox="0 0 64 64"
                      width="64"
                    >
                      <title>
                        EntrepriseSupportProductIcon
                      </title>
                      <g
                        clip-path="url(#a)"
                      >
                        <g>
                          <g
                            class="fillWeak"
                            fill="#521094"
                          >
                            <path
                              d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M48 2H16C8.268 2 2 8.268 2 16v32c0 7.732 6.268 14 14 14h32c7.732 0 14-6.268 14-14V16c0-7.732-6.268-14-14-14M16 0C7.163 0 0 7.163 0 16v32c0 8.837 7.163 16 16 16h32c8.837 0 16-7.163 16-16V16c0-8.837-7.163-16-16-16z"
                              fill-rule="evenodd"
                            />
                          </g>
                        </g>
                        <g>
                          <path
                            class="fillStrong"
                            clip-rule="evenodd"
                            d="M32 35c-5.799 0-10.5 4.701-10.5 10.5 0 2.1.616 4.053 1.676 5.693a1 1 0 0 1 .126.802l-.985 3.676 3.904-1.046a1 1 0 0 1 .74.09A10.45 10.45 0 0 0 32 56c5.799 0 10.5-4.701 10.5-10.5S37.799 35 32 35M19.5 45.5C19.5 38.596 25.096 33 32 33s12.5 5.596 12.5 12.5S38.904 58 32 58c-2.027 0-3.944-.483-5.64-1.342l-5.199 1.393a1 1 0 0 1-1.225-1.224l1.322-4.932A12.45 12.45 0 0 1 19.5 45.5"
                            fill="#bf95f9"
                            fill-rule="evenodd"
                          />
                          <g
                            class="fill"
                            fill="#fff"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M31.999 6c-5.117 0-9.492 3.17-11.265 7.648A3.66 3.66 0 0 0 19 16.763v2.662a3.66 3.66 0 0 0 3.663 3.663h2.396A8.55 8.55 0 0 0 32 26.638c2.858 0 5.389-1.4 6.942-3.551h2.395a3.66 3.66 0 0 0 3.662-3.663v-2.662a3.66 3.66 0 0 0-1.736-3.116A12.11 12.11 0 0 0 31.999 6m0 2a10.11 10.11 0 0 0-8.788 5.1h1.847A8.55 8.55 0 0 1 32 9.55a8.55 8.55 0 0 1 6.94 3.55h1.846A10.11 10.11 0 0 0 32 8Zm-8.553 10.094c0 1.054.19 2.062.54 2.994h-1.324A1.66 1.66 0 0 1 21 19.425v-2.662c0-.918.744-1.662 1.662-1.662h1.323a8.5 8.5 0 0 0-.54 2.993ZM40.014 15.1c.35.932.54 1.94.54 2.994 0 1.053-.19 2.062-.54 2.993h1.323c.918 0 1.662-.744 1.662-1.663v-2.662c0-.918-.744-1.662-1.662-1.662zm-14.568 2.994c0-3.612 2.933-6.543 6.554-6.543s6.554 2.93 6.554 6.543-2.933 6.544-6.554 6.544a6.55 6.55 0 0 1-6.554-6.544"
                              fill-rule="evenodd"
                            />
                            <path
                              d="M44.471 44.65a13 13 0 0 1-.024 2.013c4.155.524 8.378.328 12.482-.588q.035.003.071.002a1 1 0 0 0 1-1V40.68a6.347 6.347 0 0 0-6.347-6.347h-5.306a6.3 6.3 0 0 0-2.346.448 8.06 8.06 0 0 0-7.952-6.742h-8.1a8.06 8.06 0 0 0-7.952 6.741 6.3 6.3 0 0 0-2.344-.447h-5.306A6.347 6.347 0 0 0 6 40.68v4.353a1 1 0 0 0 .774.974 36.4 36.4 0 0 0 12.78.656 13 13 0 0 1-.025-2.014c-3.834.51-7.731.37-11.529-.42V40.68c0-2.4 1.946-4.347 4.347-4.347h5.306a4.3 4.3 0 0 1 2.237.62v5.437a12.5 12.5 0 0 1 2-4.243V36.1a6.06 6.06 0 0 1 6.06-6.06h8.099a6.06 6.06 0 0 1 6.06 6.06v2.046a12.5 12.5 0 0 1 2 4.238v-5.43a4.33 4.33 0 0 1 2.238-.62h5.306c2.4 0 4.347 1.946 4.347 4.347v3.55a34.5 34.5 0 0 1-11.529.42Z"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M42.666 27.333a6.333 6.333 0 1 1 12.667 0 6.333 6.333 0 0 1-12.666 0ZM49 23a4.333 4.333 0 1 0 0 8.667A4.333 4.333 0 0 0 49 23m-34-2a6.333 6.333 0 1 0 0 12.667A6.333 6.333 0 0 0 15 21m-4.334 6.333a4.333 4.333 0 1 1 8.667 0 4.333 4.333 0 0 1-8.666 0ZM32 38.5a1 1 0 0 1 .897.557l1.53 3.102 3.423.497a1 1 0 0 1 .554 1.706l-2.476 2.414.584 3.41a1 1 0 0 1-1.45 1.053L32 49.63l-3.061 1.61a1 1 0 0 1-1.451-1.054l.584-3.409-2.476-2.414a1 1 0 0 1 .554-1.706l3.423-.497 1.53-3.102A1 1 0 0 1 32 38.5m0 3.26-.867 1.756a1 1 0 0 1-.753.547l-1.937.281 1.402 1.367a1 1 0 0 1 .287.885l-.33 1.93 1.733-.911a1 1 0 0 1 .93 0l1.734.911-.331-1.93a1 1 0 0 1 .287-.885l1.402-1.367-1.937-.281a1 1 0 0 1-.753-.547z"
                              fill-rule="evenodd"
                            />
                          </g>
                        </g>
                      </g>
                      <defs>
                        <clippath
                          id="a"
                        >
                          <path
                            class="fill"
                            d="M0 0h64v64H0z"
                            fill="#fff"
                          />
                        </clippath>
                      </defs>
                    </svg>
                    <div
                      class="uv_toi52u0 uv_toi52ud uv_toi52u2d"
                    >
                      <span
                        class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owc uv_m4c9ow16 uv_m4c9ow1a uv_m4c9ow2e"
                      >
                        €109.99
                      </span>
                      <div
                        class="uv_toi52u0 uv_toi52u2d"
                        style="min-height: 16px;"
                      />
                    </div>
                  </div>
                  <div
                    class="uv_2xypr5f"
                  >
                    <div
                      class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owp uv_m4c9ow1a"
                    >
                      <div
                        style="display: flex; flex-direction: column; gap: 16px;"
                      >
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                        <p
                          style="padding-inline: 16px;"
                        >
                          For fast-growing starups & mission-critical infrastructure
                        </p>
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u41"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <button
                    class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe4 uv_e1wcoe9 uv_e1wcoef uv_e1wcoei uv_e1wcoel"
                    type="button"
                  >
                    Select plan
                  </button>
                </div>
              </div>
            </td>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Cache
                  </p>
                  <div
                    aria-controls="_r_16_"
                    aria-describedby="_r_16_"
                    class="uv_w40vpo9"
                    tabindex="0"
                  >
                    <svg
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        InformationOutlineIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M8 2.313a5.687 5.687 0 1 0 0 11.374A5.687 5.687 0 0 0 8 2.313M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8m6.344-2.643c0-.363.294-.656.656-.656h.005c.363 0 .657.293.657.656v.005a.656.656 0 0 1-.657.656H8a.656.656 0 0 1-.656-.656zm.213 2.765a.657.657 0 0 1-.38-1.238l.03-.014c.906-.453 1.925.365 1.68 1.347l-.444 1.775a.657.657 0 0 1 .38 1.238l-.03.015c-.906.453-1.925-.365-1.68-1.347z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owp uv_m4c9ow1d uv_m4c9ow35"
                  style="--uv_qabug40: start;"
                >
                  €0.0135 per GB additionnal
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
              data-testid="starter-gb"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow22"
              >
                100 GB
              </span>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr59"
              data-testid="advanced-gb"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
              >
                10 TB
              </span>
            </td>
          </tr>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Pipeline
                  </p>
                  <div
                    aria-controls="_r_1b_"
                    aria-describedby="_r_1b_"
                    class="uv_w40vpo9"
                    tabindex="-1"
                  >
                    <button
                      class="uv_2xypr50"
                      data-testid="hint-popover"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <title>
                          InformationOutlineIcon
                        </title>
                        <path
                          clip-rule="evenodd"
                          d="M8 2.313a5.687 5.687 0 1 0 0 11.374A5.687 5.687 0 0 0 8 2.313M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8m6.344-2.643c0-.363.294-.656.656-.656h.005c.363 0 .657.293.657.656v.005a.656.656 0 0 1-.657.656H8a.656.656 0 0 1-.656-.656zm.213 2.765a.657.657 0 0 1-.38-1.238l.03-.014c.906-.453 1.925.365 1.68 1.347l-.444 1.775a.657.657 0 0 1 .38 1.238l-.03.015c-.906.453-1.925-.365-1.68-1.347z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owp uv_m4c9ow1d uv_m4c9ow35"
                  style="--uv_qabug40: start;"
                >
                  €4.00 per additional
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
              data-testid="starter-pipeline"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow22"
              >
                1 pipeline
              </span>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr59"
              data-testid="advanced-pipeline"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
              >
                100 pipelines
              </span>
            </td>
          </tr>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Custom domaine
                  </p>
                  <div />
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
              data-testid="starter-domain"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz1a"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CloseIcon
                </title>
                <path
                  d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94z"
                />
              </svg>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr59"
              data-testid="advanced-domain"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkz1j"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16m3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
          </tr>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    SSL Certificate
                  </p>
                  <div
                    aria-controls="_r_1h_"
                    aria-describedby="_r_1h_"
                    class="uv_w40vpo9"
                    tabindex="0"
                  >
                    <svg
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        InformationOutlineIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M8 2.313a5.687 5.687 0 1 0 0 11.374A5.687 5.687 0 0 0 8 2.313M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8m6.344-2.643c0-.363.294-.656.656-.656h.005c.363 0 .657.293.657.656v.005a.656.656 0 0 1-.657.656H8a.656.656 0 0 1-.656-.656zm.213 2.765a.657.657 0 0 1-.38-1.238l.03-.014c.906-.453 1.925.365 1.68 1.347l-.444 1.775a.657.657 0 0 1 .38 1.238l-.03.015c-.906.453-1.925-.365-1.68-1.347z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
              data-testid="starter-ssl"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkzn"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16m3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr59"
              data-testid="advanced-ssl"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkz1j"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16m3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
          </tr>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Egress fees
                  </p>
                  <div />
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
              data-testid="starter-fees"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkzn"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16m3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr59"
              data-testid="advanced-fees"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkz1j"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16m3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
          </tr>
        </tbody>
      </table>
    </form>
  </div>
</DocumentFragment>
`;

exports[`plansField > should render with on change 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <table
        class="uv_2xypr51"
      >
        <thead>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9ow16 uv_m4c9ow1a"
              >
                Features
              </span>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
            >
              <span
                class="uv_2xypr52 uv_1yf71jy0 uv_1yf71jy2 uv_1yf71jy7 uv_1yf71jyf uv_1yf71jyn uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owq uv_m4c9ow1a"
                style="--uv_qabug41: nowrap;"
              >
                Out of stock
              </span>
              <div
                class="uv_2xypr5e uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u3v uv_toi52u77"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u41"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <div
                    class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u3p"
                  >
                    <span
                      class="uv_1yf71jy0 uv_1yf71jy1 uv_1yf71jy2 uv_1yf71jy8 uv_1yf71jye uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owp uv_m4c9ow1d"
                      style="--uv_qabug41: nowrap;"
                    >
                      <label
                        for="starter"
                      >
                        Starter
                      </label>
                    </span>
                    <div
                      class="uv_toi52u0 uv_toi52ud uv_toi52u2d"
                    >
                      <span
                        class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owc uv_m4c9ow16 uv_m4c9ow1e"
                      >
                        €0.99
                      </span>
                      <div
                        class="uv_toi52u0 uv_toi52u2d"
                        style="min-height: 16px;"
                      >
                        <span
                          class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owc uv_m4c9owp uv_m4c9ow1e"
                        >
                          /month
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="uv_2xypr5f"
                  >
                    <div
                      class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owp"
                    >
                      <div
                        style="display: flex; flex-direction: column; gap: 16px;"
                      >
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                        <p
                          style="padding-inline: 16px;"
                        >
                          For developers & non mission-critical projects 
                        </p>
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u41"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <button
                    class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe4 uv_e1wcoe9 uv_e1wcoef uv_e1wcoei uv_e1wcoel"
                    type="button"
                  >
                    Select plan
                  </button>
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr54 uv_2xypr59"
            >
              <input
                class="uv_2xypr5d"
                data-testid="advanced"
                id="advanced"
                name="plans"
                type="radio"
                value="advanced"
              />
              <div
                class="uv_2xypr5e uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u3v uv_toi52u77"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u41"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <div
                    class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u3p"
                  >
                    <span
                      class="uv_1yf71jy0 uv_1yf71jy2 uv_1yf71jy8 uv_1yf71jye uv_1yf71jyh uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owp uv_m4c9ow1a"
                      style="--uv_qabug41: nowrap;"
                    >
                      <label
                        for="advanced"
                      >
                        Advanced
                      </label>
                    </span>
                    <svg
                      class="uv_icons_q76b9r3 uv_icons_q76b9r5"
                      height="64"
                      viewBox="0 0 64 64"
                      width="64"
                    >
                      <title>
                        EntrepriseSupportProductIcon
                      </title>
                      <g
                        clip-path="url(#a)"
                      >
                        <g>
                          <g
                            class="fillWeak"
                            fill="#521094"
                          >
                            <path
                              d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M48 2H16C8.268 2 2 8.268 2 16v32c0 7.732 6.268 14 14 14h32c7.732 0 14-6.268 14-14V16c0-7.732-6.268-14-14-14M16 0C7.163 0 0 7.163 0 16v32c0 8.837 7.163 16 16 16h32c8.837 0 16-7.163 16-16V16c0-8.837-7.163-16-16-16z"
                              fill-rule="evenodd"
                            />
                          </g>
                        </g>
                        <g>
                          <path
                            class="fillStrong"
                            clip-rule="evenodd"
                            d="M32 35c-5.799 0-10.5 4.701-10.5 10.5 0 2.1.616 4.053 1.676 5.693a1 1 0 0 1 .126.802l-.985 3.676 3.904-1.046a1 1 0 0 1 .74.09A10.45 10.45 0 0 0 32 56c5.799 0 10.5-4.701 10.5-10.5S37.799 35 32 35M19.5 45.5C19.5 38.596 25.096 33 32 33s12.5 5.596 12.5 12.5S38.904 58 32 58c-2.027 0-3.944-.483-5.64-1.342l-5.199 1.393a1 1 0 0 1-1.225-1.224l1.322-4.932A12.45 12.45 0 0 1 19.5 45.5"
                            fill="#bf95f9"
                            fill-rule="evenodd"
                          />
                          <g
                            class="fill"
                            fill="#fff"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M31.999 6c-5.117 0-9.492 3.17-11.265 7.648A3.66 3.66 0 0 0 19 16.763v2.662a3.66 3.66 0 0 0 3.663 3.663h2.396A8.55 8.55 0 0 0 32 26.638c2.858 0 5.389-1.4 6.942-3.551h2.395a3.66 3.66 0 0 0 3.662-3.663v-2.662a3.66 3.66 0 0 0-1.736-3.116A12.11 12.11 0 0 0 31.999 6m0 2a10.11 10.11 0 0 0-8.788 5.1h1.847A8.55 8.55 0 0 1 32 9.55a8.55 8.55 0 0 1 6.94 3.55h1.846A10.11 10.11 0 0 0 32 8Zm-8.553 10.094c0 1.054.19 2.062.54 2.994h-1.324A1.66 1.66 0 0 1 21 19.425v-2.662c0-.918.744-1.662 1.662-1.662h1.323a8.5 8.5 0 0 0-.54 2.993ZM40.014 15.1c.35.932.54 1.94.54 2.994 0 1.053-.19 2.062-.54 2.993h1.323c.918 0 1.662-.744 1.662-1.663v-2.662c0-.918-.744-1.662-1.662-1.662zm-14.568 2.994c0-3.612 2.933-6.543 6.554-6.543s6.554 2.93 6.554 6.543-2.933 6.544-6.554 6.544a6.55 6.55 0 0 1-6.554-6.544"
                              fill-rule="evenodd"
                            />
                            <path
                              d="M44.471 44.65a13 13 0 0 1-.024 2.013c4.155.524 8.378.328 12.482-.588q.035.003.071.002a1 1 0 0 0 1-1V40.68a6.347 6.347 0 0 0-6.347-6.347h-5.306a6.3 6.3 0 0 0-2.346.448 8.06 8.06 0 0 0-7.952-6.742h-8.1a8.06 8.06 0 0 0-7.952 6.741 6.3 6.3 0 0 0-2.344-.447h-5.306A6.347 6.347 0 0 0 6 40.68v4.353a1 1 0 0 0 .774.974 36.4 36.4 0 0 0 12.78.656 13 13 0 0 1-.025-2.014c-3.834.51-7.731.37-11.529-.42V40.68c0-2.4 1.946-4.347 4.347-4.347h5.306a4.3 4.3 0 0 1 2.237.62v5.437a12.5 12.5 0 0 1 2-4.243V36.1a6.06 6.06 0 0 1 6.06-6.06h8.099a6.06 6.06 0 0 1 6.06 6.06v2.046a12.5 12.5 0 0 1 2 4.238v-5.43a4.33 4.33 0 0 1 2.238-.62h5.306c2.4 0 4.347 1.946 4.347 4.347v3.55a34.5 34.5 0 0 1-11.529.42Z"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M42.666 27.333a6.333 6.333 0 1 1 12.667 0 6.333 6.333 0 0 1-12.666 0ZM49 23a4.333 4.333 0 1 0 0 8.667A4.333 4.333 0 0 0 49 23m-34-2a6.333 6.333 0 1 0 0 12.667A6.333 6.333 0 0 0 15 21m-4.334 6.333a4.333 4.333 0 1 1 8.667 0 4.333 4.333 0 0 1-8.666 0ZM32 38.5a1 1 0 0 1 .897.557l1.53 3.102 3.423.497a1 1 0 0 1 .554 1.706l-2.476 2.414.584 3.41a1 1 0 0 1-1.45 1.053L32 49.63l-3.061 1.61a1 1 0 0 1-1.451-1.054l.584-3.409-2.476-2.414a1 1 0 0 1 .554-1.706l3.423-.497 1.53-3.102A1 1 0 0 1 32 38.5m0 3.26-.867 1.756a1 1 0 0 1-.753.547l-1.937.281 1.402 1.367a1 1 0 0 1 .287.885l-.33 1.93 1.733-.911a1 1 0 0 1 .93 0l1.734.911-.331-1.93a1 1 0 0 1 .287-.885l1.402-1.367-1.937-.281a1 1 0 0 1-.753-.547z"
                              fill-rule="evenodd"
                            />
                          </g>
                        </g>
                      </g>
                      <defs>
                        <clippath
                          id="a"
                        >
                          <path
                            class="fill"
                            d="M0 0h64v64H0z"
                            fill="#fff"
                          />
                        </clippath>
                      </defs>
                    </svg>
                    <div
                      class="uv_toi52u0 uv_toi52ud uv_toi52u2d"
                    >
                      <span
                        class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owc uv_m4c9ow16 uv_m4c9ow1a uv_m4c9ow2e"
                      >
                        €109.99
                      </span>
                      <div
                        class="uv_toi52u0 uv_toi52u2d"
                        style="min-height: 16px;"
                      />
                    </div>
                  </div>
                  <div
                    class="uv_2xypr5f"
                  >
                    <div
                      class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owp uv_m4c9ow1a"
                    >
                      <div
                        style="display: flex; flex-direction: column; gap: 16px;"
                      >
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                        <p
                          style="padding-inline: 16px;"
                        >
                          For fast-growing starups & mission-critical infrastructure
                        </p>
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u41"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <div
                    class="uv_2xypr5h"
                  >
                    <span
                      class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owc uv_m4c9owl uv_m4c9ow1a uv_m4c9ow2e"
                    >
                      Current plan
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Cache
                  </p>
                  <div
                    aria-controls="_r_1v_"
                    aria-describedby="_r_1v_"
                    class="uv_w40vpo9"
                    tabindex="0"
                  >
                    <svg
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        InformationOutlineIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M8 2.313a5.687 5.687 0 1 0 0 11.374A5.687 5.687 0 0 0 8 2.313M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8m6.344-2.643c0-.363.294-.656.656-.656h.005c.363 0 .657.293.657.656v.005a.656.656 0 0 1-.657.656H8a.656.656 0 0 1-.656-.656zm.213 2.765a.657.657 0 0 1-.38-1.238l.03-.014c.906-.453 1.925.365 1.68 1.347l-.444 1.775a.657.657 0 0 1 .38 1.238l-.03.015c-.906.453-1.925-.365-1.68-1.347z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owp uv_m4c9ow1d uv_m4c9ow35"
                  style="--uv_qabug40: start;"
                >
                  €0.0135 per GB additionnal
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
              data-testid="starter-gb"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow22"
              >
                100 GB
              </span>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr54 uv_2xypr59"
              data-testid="advanced-gb"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
              >
                10 TB
              </span>
            </td>
          </tr>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Pipeline
                  </p>
                  <div
                    aria-controls="_r_24_"
                    aria-describedby="_r_24_"
                    class="uv_w40vpo9"
                    tabindex="-1"
                  >
                    <button
                      class="uv_2xypr50"
                      data-testid="hint-popover"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <title>
                          InformationOutlineIcon
                        </title>
                        <path
                          clip-rule="evenodd"
                          d="M8 2.313a5.687 5.687 0 1 0 0 11.374A5.687 5.687 0 0 0 8 2.313M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8m6.344-2.643c0-.363.294-.656.656-.656h.005c.363 0 .657.293.657.656v.005a.656.656 0 0 1-.657.656H8a.656.656 0 0 1-.656-.656zm.213 2.765a.657.657 0 0 1-.38-1.238l.03-.014c.906-.453 1.925.365 1.68 1.347l-.444 1.775a.657.657 0 0 1 .38 1.238l-.03.015c-.906.453-1.925-.365-1.68-1.347z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owp uv_m4c9ow1d uv_m4c9ow35"
                  style="--uv_qabug40: start;"
                >
                  €4.00 per additional
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
              data-testid="starter-pipeline"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow22"
              >
                1 pipeline
              </span>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr54 uv_2xypr59"
              data-testid="advanced-pipeline"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
              >
                100 pipelines
              </span>
            </td>
          </tr>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Custom domaine
                  </p>
                  <div />
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
              data-testid="starter-domain"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz1a"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CloseIcon
                </title>
                <path
                  d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94z"
                />
              </svg>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr54 uv_2xypr59"
              data-testid="advanced-domain"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkz1j"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16m3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
          </tr>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    SSL Certificate
                  </p>
                  <div
                    aria-controls="_r_2a_"
                    aria-describedby="_r_2a_"
                    class="uv_w40vpo9"
                    tabindex="0"
                  >
                    <svg
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        InformationOutlineIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M8 2.313a5.687 5.687 0 1 0 0 11.374A5.687 5.687 0 0 0 8 2.313M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8m6.344-2.643c0-.363.294-.656.656-.656h.005c.363 0 .657.293.657.656v.005a.656.656 0 0 1-.657.656H8a.656.656 0 0 1-.656-.656zm.213 2.765a.657.657 0 0 1-.38-1.238l.03-.014c.906-.453 1.925.365 1.68 1.347l-.444 1.775a.657.657 0 0 1 .38 1.238l-.03.015c-.906.453-1.925-.365-1.68-1.347z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
              data-testid="starter-ssl"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkzn"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16m3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr54 uv_2xypr59"
              data-testid="advanced-ssl"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkz1j"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16m3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
          </tr>
          <tr>
            <td
              class="uv_2xypr53"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Egress fees
                  </p>
                  <div />
                </div>
              </div>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr55"
              data-testid="starter-fees"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkzn"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16m3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
            <td
              class="uv_2xypr53 uv_2xypr54 uv_2xypr59"
              data-testid="advanced-fees"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkz1j"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16m3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
          </tr>
        </tbody>
      </table>
    </form>
  </div>
</DocumentFragment>
`;
